--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,6 @@
               "src/assets"
             ],
             "styles": [
-              
               "src/styles.css"
             ],
             "scripts": []
@@ -120,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "BestFashionFriend"
+    }
+  },
+  "defaultProject": "BestFashionFriend",
+  "cli": {
+    "analytics": false
+  }
 }
