--- a/backend/package.json
+++ b/backend/package.json
@@ -8,10 +8,17 @@
   },
   "author": "",
   "license": "ISC",
-  "engines":{
-    "node":"13.9.0"
+  "dependencies": {
+    
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "font-awesome": "^4.7.0",
+    "mongoose": "^5.9.19"
+    
+  },
+  "engines": {
+    "node": "13.9.0"
   }
 }
-
-
-
